# toolchain

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: ne32.cmake  ne32.s60v3.toolchain.cmake  ne32.s60v5.toolchain.cmake
libraries/: CMakeLists.txt
libraries/defs/: e32fs.def  e32kern.def  ne32fs.def  ne32kern.def
libraries/include/epoc/: common.h  descriptor.h  err.h  filesystem.h  kernel.h  std.h  syscall_common.h  syscall_s60v5.h
libraries/include/epoc/filesystem/: common.h  filesystem.h
libraries/include/epoc/ngi/: memmgmt.h
libraries/src/: CMakeLists.txt  common.c  descriptor.c  dllentry.c  entry.c  exe.c  exeentry.c  filesystem.c  kernel.c  std.c  syscall_s60v5.c
libraries/src/entries/: exethread.c
libraries/src/filesystem/: CMakeLists.txt  filesystem.c
tools/: CMakeLists.txt
