externalproject_add(elf2e32
    SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/elf2e32"
    INSTALL_DIR "${CMAKE_BINARY_DIR}/bin"
    BINARY_DIR "${CMAKE_BINARY_DIR}/bin"
    CMAKE_GENERATOR "Ninja"
    CMAKE_CACHE_ARGS
        -DCMAKE_INSTALL_PREFIX:string=<INSTALL_DIR>
    BUILD_ALWAYS 1 
    INSTALL_COMMAND "")

install(DIRECTORY "${CMAKE_BINARY_DIR}/bin/"
   DESTINATION "${CMAKE_INSTALL_PREFIX}/bin"
   FILES_MATCHING 
    PATTERN "elf2e32.exe"
    PATTERN "elf2e32")